# archive

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SUBMISSION.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
apps/admin-web/: Dockerfile  eslint.config.mjs  package.json
apps/api/: Dockerfile
apps/worker/: Dockerfile
docs/: technical-solution.md
docs-site/: api.mdx  architecture.mdx  demo-script.mdx  docs.json  index.mdx  openapi.json  processed-database.mdx  quality-report.mdx  quickstart.mdx
docs/contracts/: README.md  auth-context.v1.md  document-ingestion.v1.md  exports.v1.md  graph-read-model.v1.md  partner-sync.v1.md  price-publication.v1.md  processing-outbox.v1.md  review-tasks.v1.md  service-catalog-sync.v1.md  webhook-events.v1.md
docs/memory/: current-technical-state.md  differentiators.md  original-brief.md  product-scope.md  production-architecture.md  quality-bar.md
migrations/: env.py
outputs/: MedArchive_demo_video.webm  MedArchive_hackathon_pitch.pptx  MedArchive_hackathon_pitch.pptx.inspect.ndjson  processed_price_items_preview.csv  quality_report.json  quality_report.md  service_catalog_seed.json
scripts/: build_hackathon_pitch.mjs  generate_hackathon_outputs.py  record_hackathon_demo.mjs
tests/: __init__.py  fakes.py  fixtures_docx.py  fixtures_pdf.py  fixtures_xlsx.py  test_api_health.py  test_auth_rbac.py  test_catalog_import_api.py  test_catalog_import_service.py  test_cli.py  test_document_processing.py  test_docx_parser.py  test_evidence_api.py  test_exports.py  test_exports_api.py  test_graph_api.py  test_graph_projection.py  test_ingestion_api.py  test_ingestion_orchestrator.py  test_ingestion_service.py  test_outbox.py  test_partner_profiles.py  test_pdf_ocr_parser.py  test_pdf_parser.py  test_price_diff.py  test_price_versions_api.py  test_quality_docs.py  test_real_xlsx_graph_vertical_slice.py  test_remote_catalog_sync.py  test_review_preparation.py  test_review_tasks_api.py  test_review_tasks_service.py  test_search_api.py  test_webhooks.py  test_workflow.py  test_xlsx_vertical_slice.py
(+48 files in other folders)
