[project]
name = "medarchive"
version = "0.1.0"
description = "Integration-first production service for clinic price-list processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "celery>=5.4",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "structlog>=24.4",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
medarchive = "medarchive_infrastructure.cli:main"

[tool.setuptools.packages.find]
where = [
    "apps/api",
    "apps/worker",
    "packages/application",
    "packages/domain",
    "packages/infrastructure",
    "packages/document_parsers",
    "packages/matching",
    "packages/shared",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
parsers = [
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "xlrd>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "apps/api",
    "apps/worker",
    "packages/application",
    "packages/domain",
    "packages/infrastructure",
    "packages/document_parsers",
    "packages/matching",
    "packages/shared",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures_xlsx.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "apps/api",
    "apps/worker",
    "packages/application",
    "packages/domain",
    "packages/infrastructure",
    "packages/document_parsers",
    "packages/matching",
    "packages/shared",
]

[[tool.mypy.overrides]]
module = "celery"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xlrd"
ignore_missing_imports = true
